# aoc2020

./: .gitignore  aoc1.py  aoc2.py  aoc4.cpp  aoc4.py  aoc5.py  aoc6-3.py  aoc6.py  aoc7.py
aoc4/: aoc4.sln
aoc4/aoc4/: aoc7.cpp  aoc_utils.cpp  aoc_utils.h
day04/: aoc4.cpp  aoc4.py
day04/aoc4/aoc4/: aoc4.cpp  aoc4.vcxproj
day06/: aoc6-2.py
day07/: CMakeLists.txt  aoc7.py  day7.cpp
day08/: CMakeLists.txt  day8.cpp  day8.py
day09/: CMakeLists.txt  day9.cpp
day1/: aoc1-input-demo.txt
day10/: CMakeLists.txt  day10.cpp  day10.py
day11/: CMakeLists.txt  day11.cpp  day11.py
day12/: aoc2020-day12-part1.avi  day12.py
day13/: day13.py
day14/: day14.py
day15/: CMakeLists.txt  day15.cpp  day15.py
day16/: CMakeLists.txt  day16.cpp  day16.py
day17/: CMakeLists.txt  day17.cpp  day17both.py  day17part1.py  day17part2.py
day18/: day18-operators.py  day18-test.txt  day18.py
day19/: day19.py
day20/: day20.py
day21/: day21.py
day22/: day22.py
day23/: CMakeLists.txt  day23.cpp
day24/: day24.py
day25/: day25.py
day3/: aoc3.py
day8/: day8.cpp  day8.py
day9/: CMakeLists.txt  aoc.cpp  day9.py
dayXXX/: aoc.py
utils/: utils.cpp  utils.h  utils.py
